2011-01-04  Daniel Bates  <dbates@rim.com>

        Reviewed by Adam Roben.

        Extract ThreadFunctionInvocation into separate file and share between Apple Windows and Android
        https://bugs.webkit.org/show_bug.cgi?id=51855

        Both the Apple Windows and Android ports implement a similar adapter structure,
        called ThreadFunctionInvocation and ThreadData respectively, as part of
        their thread creation process. Instead, we should share such an adapter
        structure and remove duplicate code.

        * JavaScriptCore.gypi: Added header wtf/ThreadFunctionInvocation.h.
        * wtf/ThreadFunctionInvocation.h: Added.
        (WTF::ThreadFunctionInvocation::ThreadFunctionInvocation):
        * wtf/ThreadingPthreads.cpp: Removed Android-specific structure ThreadData; Instead, use ThreadFunctionInvocation.
        (WTF::runThreadWithRegistration):
        (WTF::createThreadInternal): 
        * wtf/ThreadingWin.cpp: Moved structure ThreadFunctionInvocation to its own file so that
        it can be shared with the Android implementation of createThreadInternal().
        (WTF::wtfThreadEntryPoint): Use OwnPtr to hold passed instance of ThreadFunctionInvocation.

2011-01-03  Daniel Bates  <dbates@rim.com>

        Reviewed by Darin Adler.

        Use __builtin_expect when compiling using RVCT in GNU mode
        https://bugs.webkit.org/show_bug.cgi?id=51866

        Derived from a patch by Dave Tapuska.

        * wtf/AlwaysInline.h:

2011-01-03  Darin Adler  <darin@apple.com>

        Reviewed by Brady Eidson.

        * wtf/Forward.h: Added Decoder and Encoder.

2011-01-03  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin Adler.

        Add Encode/Decode machinery Darin and I plan to work with for back/forward stuff in WebKit2.

        Starting out with a pure virtual interface to be implemented in WK2, but we might change that later.

        * GNUmakefile.am:
        * JavaScriptCore.vcproj/WTF/WTF.vcproj: